--- a/需求分析文档.md
+++ b/需求分析文档.md
@@ -1,8 +1,8 @@
 # BookStore需求分析文档
 ## 业务流图
-![png](yewu.png)
+![png](operation_flow.png)
 ## 数据流图
-![png](shuju.png)
+![png](data_flow.png)
 ## 数据词典
 ### 基本数据
 | 数据含义          | 数据组成                    |
